# enterprise-iot-bigdata-pipeline

./: .gitignore  README.md  explore.ipynb  gzip-to-parquet-etl.py  streamlit-app.py
media/: Untitled-2025-12-20-2132.excalidraw  Untitled-2026-01-01-1745.excalidraw
streamlit-iot-monitoring-dashboard/: streamlit-app.py
v1-basic-etl/: README-compacterv1.md  data-cleaner-simplified.py  gzip-to-parquet-etl.py
v1-datalog-compacter/: README-compacterv1.md  data-cleaner.py
v2-orchestrated-pipeline/: pyproject.toml  v2-orchestrated-readme.md
v2-orchestrated-pipeline/airflow_home/dags/: datalog_compacter.py  datalog_compacter_BRCB.py  datalog_compacter_BRCG.py  monolith-dag.py  s3_datalog_processor.py
